--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
         <a class="nav-link" href="index.html"><h3><i class="home fa fa-home active"></i>HOME </h3><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="about.html"><h3><i class="fa fa-user" aria-hidden="true"></i>  ABOUT US</i></h3></a>
+        <a class="nav-link" href="html/about.html"><h3><i class="fa fa-user" aria-hidden="true"></i>  ABOUT US</i></h3></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="product.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="html/product.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
          <h3> OUR PRODUCTS</h3>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown hidden">
-          <a class="dropdown-item" href="../html/product1.html">MILK</a>
-          <a class="dropdown-item" href="../html/product2.html">Curds and fermented products</a>
-          <a class="dropdown-item" href="../html/product3.html">Milk sweets and chocolates</a>
+          <a class="dropdown-item" href="html/product1.html">MILK</a>
+          <a class="dropdown-item" href="html/product2.html">Curds and fermented products</a>
+          <a class="dropdown-item" href="html/product3.html">Milk sweets and chocolates</a>
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="order.php"><h3><i class="fa fa-shopping-cart" aria-hidden="true"></i>  ORDERS</h3></a>
+        <a class="nav-link" href="html/order.php"><h3><i class="fa fa-shopping-cart" aria-hidden="true"></i>  ORDERS</h3></a>
       </li>
     </ul>
   </div>
