--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="..index.html"><h3><i class="home fa fa-home active"></i>HOME </h3><span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="../index.html"><h3><i class="home fa fa-home active"></i>HOME </h3><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="html/about.html"><h3><i class="fa fa-user" aria-hidden="true"></i>  ABOUT US</i></h3></a>
