--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="order.php"><h3><i class="fa fa-shopping-cart" aria-hidden="true"></i>  ORDERS</h3></a>
+        <a class="nav-link" href="order.html"><h3><i class="fa fa-shopping-cart" aria-hidden="true"></i>  ORDERS</h3></a>
       </li>
     </ul>
   </div>
